Fix an overflow issue with the sidebar and display card not lining up

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -74,6 +74,7 @@ html, body, #app {
   .user-sidebar {
     @apply flex flex-col justify-center gap-8 pr-8 transition-[width] duration-300 ease-in-out;
     width: 20%;
+    min-height: 600px;
   }
 
   .user-sidebar.collapsed {
